# Smart-retry

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
examples/: async_usage.py  basic_usage.py
smart_retry/: __init__.py  backoff.py  config.py  core.py  engine.py  exceptions.py  hooks.py  retry.py  utils.py
tests/: test_async.py  test_backoff.py  test_retry.py
