[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-retry"
version = "0.1.0"
description = "A universal smart retry library for Python (sync + async)"
authors = [{ name = "Ishtiaq Mahmood" }]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

dependencies = []

[project.urls]
Homepage = "https://github.com/ishtiaqmahmood/smart-retry"